// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`circular dependency 1`] = `
"Not all files could be compiled due to circular dependency


        All files: [
  \\"conduit_a.cdt\\",
  \\"conduit_b.cdt\\"
]


        Resolved: []
        "
`;

exports[`dependency multi file 1`] = `
Object {
  "conduit_a.proto": Object {
    "data": Object {
      "children": Object {
        "Function": Array [],
        "Import": Array [],
      },
      "inFileScope": Map {
        "m1" => Object {
          "children": Object {
            "Field": Array [
              Object {
                "isRequired": true,
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 8,
                  "endLineNumber": 2,
                  "startColNumber": 16,
                  "startLineNumber": 1,
                },
                "name": "d",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                  },
                },
              },
            ],
          },
          "kind": "Message",
          "loc": Object {
            "endColNumber": 16,
            "endLineNumber": 1,
            "startColNumber": 0,
            "startLineNumber": 0,
          },
          "name": "m1",
        },
      },
      "kind": "File",
      "loc": FileLocation {
        "dir": "",
        "fullname": "conduit_a.cdt",
        "name": "conduit_a.cdt",
      },
    },
    "proto": "
syntax=\\"proto2\\";

            


message m1 {
	required double d = 1;
}
",
  },
  "conduit_b.proto": Object {
    "data": Object {
      "children": Object {
        "Function": Array [],
        "Import": Array [
          Object {
            "dep": "conduit_a.cdt",
            "kind": "Import",
            "loc": Object {
              "endColNumber": 31,
              "endLineNumber": 1,
              "startColNumber": 0,
              "startLineNumber": 0,
            },
            "name": "A",
          },
        ],
      },
      "inFileScope": Map {
        "A" => Object {
          "children": Object {
            "Function": Array [],
            "Import": Array [],
          },
          "inFileScope": Map {
            "m1" => Object {
              "children": Object {
                "Field": Array [
                  Object {
                    "isRequired": true,
                    "kind": "Field",
                    "loc": Object {
                      "endColNumber": 8,
                      "endLineNumber": 2,
                      "startColNumber": 16,
                      "startLineNumber": 1,
                    },
                    "name": "d",
                    "part": Object {
                      "FieldType": Object {
                        "differentiate": [Function],
                        "kind": "FieldType",
                      },
                    },
                  },
                ],
              },
              "kind": "Message",
              "loc": Object {
                "endColNumber": 16,
                "endLineNumber": 1,
                "startColNumber": 0,
                "startLineNumber": 0,
              },
              "name": "m1",
            },
          },
          "kind": "File",
          "loc": FileLocation {
            "dir": "",
            "fullname": "conduit_a.cdt",
            "name": "conduit_a.cdt",
          },
        },
        "m2" => Object {
          "children": Object {
            "Field": Array [
              Object {
                "isRequired": true,
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 8,
                  "endLineNumber": 4,
                  "startColNumber": 16,
                  "startLineNumber": 3,
                },
                "name": "m",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                  },
                },
              },
            ],
          },
          "kind": "Message",
          "loc": Object {
            "endColNumber": 16,
            "endLineNumber": 3,
            "startColNumber": 31,
            "startLineNumber": 1,
          },
          "name": "m2",
        },
      },
      "kind": "File",
      "loc": FileLocation {
        "dir": "",
        "fullname": "conduit_b.cdt",
        "name": "conduit_b.cdt",
      },
    },
    "proto": "
syntax=\\"proto2\\";
import \\"conduit_a.proto\\";
            


message m2 {
	required m1 m = 1;
}
",
  },
}
`;

exports[`dependency subdirs 1`] = `
Object {
  "conduit_a.proto": Object {
    "data": Object {
      "children": Object {
        "Function": Array [],
        "Import": Array [],
      },
      "inFileScope": Map {
        "m1" => Object {
          "children": Object {
            "Field": Array [
              Object {
                "isRequired": true,
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 8,
                  "endLineNumber": 2,
                  "startColNumber": 16,
                  "startLineNumber": 1,
                },
                "name": "d",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                  },
                },
              },
            ],
          },
          "kind": "Message",
          "loc": Object {
            "endColNumber": 16,
            "endLineNumber": 1,
            "startColNumber": 0,
            "startLineNumber": 0,
          },
          "name": "m1",
        },
      },
      "kind": "File",
      "loc": FileLocation {
        "dir": "",
        "fullname": "conduit_a.cdt",
        "name": "conduit_a.cdt",
      },
    },
    "proto": "
syntax=\\"proto2\\";

            


message m1 {
	required double d = 1;
}
",
  },
  "conduit_d.proto": Object {
    "data": Object {
      "children": Object {
        "Function": Array [],
        "Import": Array [
          Object {
            "dep": "sub/conduit_c.cdt",
            "kind": "Import",
            "loc": Object {
              "endColNumber": 35,
              "endLineNumber": 1,
              "startColNumber": 0,
              "startLineNumber": 0,
            },
            "name": "C",
          },
        ],
      },
      "inFileScope": Map {
        "C" => Object {
          "children": Object {
            "Function": Array [],
            "Import": Array [
              Object {
                "dep": "conduit_a.cdt",
                "kind": "Import",
                "loc": Object {
                  "endColNumber": 31,
                  "endLineNumber": 1,
                  "startColNumber": 0,
                  "startLineNumber": 0,
                },
                "name": "A",
              },
              Object {
                "dep": "sub/conduit_b.cdt",
                "kind": "Import",
                "loc": Object {
                  "endColNumber": 33,
                  "endLineNumber": 2,
                  "startColNumber": 31,
                  "startLineNumber": 1,
                },
                "name": "B",
              },
            ],
          },
          "inFileScope": Map {
            "A" => Object {
              "children": Object {
                "Function": Array [],
                "Import": Array [],
              },
              "inFileScope": Map {
                "m1" => Object {
                  "children": Object {
                    "Field": Array [
                      Object {
                        "isRequired": true,
                        "kind": "Field",
                        "loc": Object {
                          "endColNumber": 8,
                          "endLineNumber": 2,
                          "startColNumber": 16,
                          "startLineNumber": 1,
                        },
                        "name": "d",
                        "part": Object {
                          "FieldType": Object {
                            "differentiate": [Function],
                            "kind": "FieldType",
                          },
                        },
                      },
                    ],
                  },
                  "kind": "Message",
                  "loc": Object {
                    "endColNumber": 16,
                    "endLineNumber": 1,
                    "startColNumber": 0,
                    "startLineNumber": 0,
                  },
                  "name": "m1",
                },
              },
              "kind": "File",
              "loc": FileLocation {
                "dir": "",
                "fullname": "conduit_a.cdt",
                "name": "conduit_a.cdt",
              },
            },
            "B" => Object {
              "children": Object {
                "Function": Array [],
                "Import": Array [
                  Object {
                    "dep": "conduit_a.cdt",
                    "kind": "Import",
                    "loc": Object {
                      "endColNumber": 31,
                      "endLineNumber": 1,
                      "startColNumber": 0,
                      "startLineNumber": 0,
                    },
                    "name": "A",
                  },
                ],
              },
              "inFileScope": Map {
                "A" => Object {
                  "children": Object {
                    "Function": Array [],
                    "Import": Array [],
                  },
                  "inFileScope": Map {
                    "m1" => Object {
                      "children": Object {
                        "Field": Array [
                          Object {
                            "isRequired": true,
                            "kind": "Field",
                            "loc": Object {
                              "endColNumber": 8,
                              "endLineNumber": 2,
                              "startColNumber": 16,
                              "startLineNumber": 1,
                            },
                            "name": "d",
                            "part": Object {
                              "FieldType": Object {
                                "differentiate": [Function],
                                "kind": "FieldType",
                              },
                            },
                          },
                        ],
                      },
                      "kind": "Message",
                      "loc": Object {
                        "endColNumber": 16,
                        "endLineNumber": 1,
                        "startColNumber": 0,
                        "startLineNumber": 0,
                      },
                      "name": "m1",
                    },
                  },
                  "kind": "File",
                  "loc": FileLocation {
                    "dir": "",
                    "fullname": "conduit_a.cdt",
                    "name": "conduit_a.cdt",
                  },
                },
                "m2" => Object {
                  "children": Object {
                    "Field": Array [
                      Object {
                        "isRequired": true,
                        "kind": "Field",
                        "loc": Object {
                          "endColNumber": 8,
                          "endLineNumber": 4,
                          "startColNumber": 16,
                          "startLineNumber": 3,
                        },
                        "name": "m",
                        "part": Object {
                          "FieldType": Object {
                            "differentiate": [Function],
                            "kind": "FieldType",
                          },
                        },
                      },
                    ],
                  },
                  "kind": "Message",
                  "loc": Object {
                    "endColNumber": 16,
                    "endLineNumber": 3,
                    "startColNumber": 31,
                    "startLineNumber": 1,
                  },
                  "name": "m2",
                },
              },
              "kind": "File",
              "loc": FileLocation {
                "dir": "sub/",
                "fullname": "sub/conduit_b.cdt",
                "name": "conduit_b.cdt",
              },
            },
            "m2" => Object {
              "children": Object {
                "Field": Array [
                  Object {
                    "isRequired": true,
                    "kind": "Field",
                    "loc": Object {
                      "endColNumber": 8,
                      "endLineNumber": 5,
                      "startColNumber": 16,
                      "startLineNumber": 4,
                    },
                    "name": "m1",
                    "part": Object {
                      "FieldType": Object {
                        "differentiate": [Function],
                        "kind": "FieldType",
                      },
                    },
                  },
                  Object {
                    "isRequired": true,
                    "kind": "Field",
                    "loc": Object {
                      "endColNumber": 8,
                      "endLineNumber": 6,
                      "startColNumber": 0,
                      "startLineNumber": 6,
                    },
                    "name": "m2",
                    "part": Object {
                      "FieldType": Object {
                        "differentiate": [Function],
                        "kind": "FieldType",
                      },
                    },
                  },
                ],
              },
              "kind": "Message",
              "loc": Object {
                "endColNumber": 16,
                "endLineNumber": 4,
                "startColNumber": 33,
                "startLineNumber": 2,
              },
              "name": "m2",
            },
          },
          "kind": "File",
          "loc": FileLocation {
            "dir": "sub/",
            "fullname": "sub/conduit_c.cdt",
            "name": "conduit_c.cdt",
          },
        },
        "D" => Object {
          "children": Object {
            "Field": Array [
              Object {
                "isRequired": true,
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 8,
                  "endLineNumber": 3,
                  "startColNumber": 15,
                  "startLineNumber": 2,
                },
                "name": "d",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                  },
                },
              },
            ],
          },
          "kind": "Message",
          "loc": Object {
            "endColNumber": 15,
            "endLineNumber": 2,
            "startColNumber": 35,
            "startLineNumber": 1,
          },
          "name": "D",
        },
      },
      "kind": "File",
      "loc": FileLocation {
        "dir": "",
        "fullname": "conduit_d.cdt",
        "name": "conduit_d.cdt",
      },
    },
    "proto": "
syntax=\\"proto2\\";
import \\"sub/conduit_c.proto\\";
            


message D {
	required m2 d = 1;
}
",
  },
  "sub/conduit_b.proto": Object {
    "data": Object {
      "children": Object {
        "Function": Array [],
        "Import": Array [
          Object {
            "dep": "conduit_a.cdt",
            "kind": "Import",
            "loc": Object {
              "endColNumber": 31,
              "endLineNumber": 1,
              "startColNumber": 0,
              "startLineNumber": 0,
            },
            "name": "A",
          },
        ],
      },
      "inFileScope": Map {
        "A" => Object {
          "children": Object {
            "Function": Array [],
            "Import": Array [],
          },
          "inFileScope": Map {
            "m1" => Object {
              "children": Object {
                "Field": Array [
                  Object {
                    "isRequired": true,
                    "kind": "Field",
                    "loc": Object {
                      "endColNumber": 8,
                      "endLineNumber": 2,
                      "startColNumber": 16,
                      "startLineNumber": 1,
                    },
                    "name": "d",
                    "part": Object {
                      "FieldType": Object {
                        "differentiate": [Function],
                        "kind": "FieldType",
                      },
                    },
                  },
                ],
              },
              "kind": "Message",
              "loc": Object {
                "endColNumber": 16,
                "endLineNumber": 1,
                "startColNumber": 0,
                "startLineNumber": 0,
              },
              "name": "m1",
            },
          },
          "kind": "File",
          "loc": FileLocation {
            "dir": "",
            "fullname": "conduit_a.cdt",
            "name": "conduit_a.cdt",
          },
        },
        "m2" => Object {
          "children": Object {
            "Field": Array [
              Object {
                "isRequired": true,
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 8,
                  "endLineNumber": 4,
                  "startColNumber": 16,
                  "startLineNumber": 3,
                },
                "name": "m",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                  },
                },
              },
            ],
          },
          "kind": "Message",
          "loc": Object {
            "endColNumber": 16,
            "endLineNumber": 3,
            "startColNumber": 31,
            "startLineNumber": 1,
          },
          "name": "m2",
        },
      },
      "kind": "File",
      "loc": FileLocation {
        "dir": "sub/",
        "fullname": "sub/conduit_b.cdt",
        "name": "conduit_b.cdt",
      },
    },
    "proto": "
syntax=\\"proto2\\";
import \\"conduit_a.proto\\";
            


message m2 {
	required m1 m = 1;
}
",
  },
  "sub/conduit_c.proto": Object {
    "data": Object {
      "children": Object {
        "Function": Array [],
        "Import": Array [
          Object {
            "dep": "conduit_a.cdt",
            "kind": "Import",
            "loc": Object {
              "endColNumber": 31,
              "endLineNumber": 1,
              "startColNumber": 0,
              "startLineNumber": 0,
            },
            "name": "A",
          },
          Object {
            "dep": "sub/conduit_b.cdt",
            "kind": "Import",
            "loc": Object {
              "endColNumber": 33,
              "endLineNumber": 2,
              "startColNumber": 31,
              "startLineNumber": 1,
            },
            "name": "B",
          },
        ],
      },
      "inFileScope": Map {
        "A" => Object {
          "children": Object {
            "Function": Array [],
            "Import": Array [],
          },
          "inFileScope": Map {
            "m1" => Object {
              "children": Object {
                "Field": Array [
                  Object {
                    "isRequired": true,
                    "kind": "Field",
                    "loc": Object {
                      "endColNumber": 8,
                      "endLineNumber": 2,
                      "startColNumber": 16,
                      "startLineNumber": 1,
                    },
                    "name": "d",
                    "part": Object {
                      "FieldType": Object {
                        "differentiate": [Function],
                        "kind": "FieldType",
                      },
                    },
                  },
                ],
              },
              "kind": "Message",
              "loc": Object {
                "endColNumber": 16,
                "endLineNumber": 1,
                "startColNumber": 0,
                "startLineNumber": 0,
              },
              "name": "m1",
            },
          },
          "kind": "File",
          "loc": FileLocation {
            "dir": "",
            "fullname": "conduit_a.cdt",
            "name": "conduit_a.cdt",
          },
        },
        "B" => Object {
          "children": Object {
            "Function": Array [],
            "Import": Array [
              Object {
                "dep": "conduit_a.cdt",
                "kind": "Import",
                "loc": Object {
                  "endColNumber": 31,
                  "endLineNumber": 1,
                  "startColNumber": 0,
                  "startLineNumber": 0,
                },
                "name": "A",
              },
            ],
          },
          "inFileScope": Map {
            "A" => Object {
              "children": Object {
                "Function": Array [],
                "Import": Array [],
              },
              "inFileScope": Map {
                "m1" => Object {
                  "children": Object {
                    "Field": Array [
                      Object {
                        "isRequired": true,
                        "kind": "Field",
                        "loc": Object {
                          "endColNumber": 8,
                          "endLineNumber": 2,
                          "startColNumber": 16,
                          "startLineNumber": 1,
                        },
                        "name": "d",
                        "part": Object {
                          "FieldType": Object {
                            "differentiate": [Function],
                            "kind": "FieldType",
                          },
                        },
                      },
                    ],
                  },
                  "kind": "Message",
                  "loc": Object {
                    "endColNumber": 16,
                    "endLineNumber": 1,
                    "startColNumber": 0,
                    "startLineNumber": 0,
                  },
                  "name": "m1",
                },
              },
              "kind": "File",
              "loc": FileLocation {
                "dir": "",
                "fullname": "conduit_a.cdt",
                "name": "conduit_a.cdt",
              },
            },
            "m2" => Object {
              "children": Object {
                "Field": Array [
                  Object {
                    "isRequired": true,
                    "kind": "Field",
                    "loc": Object {
                      "endColNumber": 8,
                      "endLineNumber": 4,
                      "startColNumber": 16,
                      "startLineNumber": 3,
                    },
                    "name": "m",
                    "part": Object {
                      "FieldType": Object {
                        "differentiate": [Function],
                        "kind": "FieldType",
                      },
                    },
                  },
                ],
              },
              "kind": "Message",
              "loc": Object {
                "endColNumber": 16,
                "endLineNumber": 3,
                "startColNumber": 31,
                "startLineNumber": 1,
              },
              "name": "m2",
            },
          },
          "kind": "File",
          "loc": FileLocation {
            "dir": "sub/",
            "fullname": "sub/conduit_b.cdt",
            "name": "conduit_b.cdt",
          },
        },
        "m2" => Object {
          "children": Object {
            "Field": Array [
              Object {
                "isRequired": true,
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 8,
                  "endLineNumber": 5,
                  "startColNumber": 16,
                  "startLineNumber": 4,
                },
                "name": "m1",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                  },
                },
              },
              Object {
                "isRequired": true,
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 8,
                  "endLineNumber": 6,
                  "startColNumber": 0,
                  "startLineNumber": 6,
                },
                "name": "m2",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                  },
                },
              },
            ],
          },
          "kind": "Message",
          "loc": Object {
            "endColNumber": 16,
            "endLineNumber": 4,
            "startColNumber": 33,
            "startLineNumber": 2,
          },
          "name": "m2",
        },
      },
      "kind": "File",
      "loc": FileLocation {
        "dir": "sub/",
        "fullname": "sub/conduit_c.cdt",
        "name": "conduit_c.cdt",
      },
    },
    "proto": "
syntax=\\"proto2\\";
import \\"conduit_a.proto\\";
import \\"sub/conduit_b.proto\\";
            


message m2 {
	required m1 m1 = 1;
	required m2 m2 = 2;
}
",
  },
}
`;

exports[`function with invalid return type 1`] = `
"Unable to parse required ReturnTypeSpec entity at {\\"startColNumber\\":0,\\"startLineNumber\\":0,\\"endColNumber\\":17,\\"endLineNumber\\":2}

  SomeType {
    }
  "
`;

exports[`function with type return returns none 1`] = `
"Unable to parse required ReturnTypeSpec entity at {\\"startColNumber\\":5,\\"startLineNumber\\":4,\\"endColNumber\\":17,\\"endLineNumber\\":6}

  SomeType {
    }
  "
`;

exports[`function with unknown types 1`] = `"Unable to find end of entity for UnaryParameter at , b: Foreign.Type) {"`;

exports[`function with void returns type 1`] = `"Returning [a] which is of type SomeType but expected void return"`;

exports[`simple echo function 1`] = `
Object {
  "conduit_a.proto": Object {
    "data": Object {
      "children": Object {
        "Function": Array [
          Object {
            "kind": "Function",
            "loc": Object {
              "endColNumber": 17,
              "endLineNumber": 6,
              "startColNumber": 5,
              "startLineNumber": 4,
            },
            "name": "echo",
            "part": Object {
              "FunctionBody": Object {
                "children": Object {
                  "Statement": Array [
                    Object {
                      "differentiate": [Function],
                      "kind": "Statement",
                    },
                  ],
                },
                "kind": "FunctionBody",
                "loc": Object {
                  "endColNumber": 35,
                  "endLineNumber": 6,
                  "startColNumber": 33,
                  "startLineNumber": 6,
                },
              },
              "Parameter": Object {
                "differentiate": [Function],
                "kind": "Parameter",
              },
              "ReturnTypeSpec": Object {
                "differentiate": [Function],
                "kind": "ReturnTypeSpec",
              },
            },
          },
        ],
        "Import": Array [],
      },
      "inFileScope": Map {
        "Shout" => Object {
          "children": Object {
            "Field": Array [
              Object {
                "isRequired": true,
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 8,
                  "endLineNumber": 3,
                  "startColNumber": 19,
                  "startLineNumber": 2,
                },
                "name": "m",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                  },
                },
              },
            ],
          },
          "kind": "Message",
          "loc": Object {
            "endColNumber": 19,
            "endLineNumber": 2,
            "startColNumber": 0,
            "startLineNumber": 0,
          },
          "name": "Shout",
        },
      },
      "kind": "File",
      "loc": FileLocation {
        "dir": "",
        "fullname": "conduit_a.cdt",
        "name": "conduit_a.cdt",
      },
    },
    "proto": "
syntax=\\"proto2\\";

            


message Shout {
	required string m = 1;
}
",
  },
}
`;

exports[`simple multi file 1`] = `
Object {
  "conduit_a.proto": Object {
    "data": Object {
      "children": Object {
        "Function": Array [],
        "Import": Array [],
      },
      "inFileScope": Map {
        "m1" => Object {
          "children": Object {
            "Field": Array [
              Object {
                "isRequired": true,
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 8,
                  "endLineNumber": 2,
                  "startColNumber": 16,
                  "startLineNumber": 1,
                },
                "name": "d",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                  },
                },
              },
            ],
          },
          "kind": "Message",
          "loc": Object {
            "endColNumber": 16,
            "endLineNumber": 1,
            "startColNumber": 0,
            "startLineNumber": 0,
          },
          "name": "m1",
        },
      },
      "kind": "File",
      "loc": FileLocation {
        "dir": "",
        "fullname": "conduit_a.cdt",
        "name": "conduit_a.cdt",
      },
    },
    "proto": "
syntax=\\"proto2\\";

            


message m1 {
	required double d = 1;
}
",
  },
  "conduit_b.proto": Object {
    "data": Object {
      "children": Object {
        "Function": Array [],
        "Import": Array [
          Object {
            "dep": "conduit_a.cdt",
            "kind": "Import",
            "loc": Object {
              "endColNumber": 31,
              "endLineNumber": 1,
              "startColNumber": 0,
              "startLineNumber": 0,
            },
            "name": "A",
          },
        ],
      },
      "inFileScope": Map {
        "A" => Object {
          "children": Object {
            "Function": Array [],
            "Import": Array [],
          },
          "inFileScope": Map {
            "m1" => Object {
              "children": Object {
                "Field": Array [
                  Object {
                    "isRequired": true,
                    "kind": "Field",
                    "loc": Object {
                      "endColNumber": 8,
                      "endLineNumber": 2,
                      "startColNumber": 16,
                      "startLineNumber": 1,
                    },
                    "name": "d",
                    "part": Object {
                      "FieldType": Object {
                        "differentiate": [Function],
                        "kind": "FieldType",
                      },
                    },
                  },
                ],
              },
              "kind": "Message",
              "loc": Object {
                "endColNumber": 16,
                "endLineNumber": 1,
                "startColNumber": 0,
                "startLineNumber": 0,
              },
              "name": "m1",
            },
          },
          "kind": "File",
          "loc": FileLocation {
            "dir": "",
            "fullname": "conduit_a.cdt",
            "name": "conduit_a.cdt",
          },
        },
        "m2" => Object {
          "children": Object {
            "Field": Array [
              Object {
                "isRequired": true,
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 8,
                  "endLineNumber": 4,
                  "startColNumber": 16,
                  "startLineNumber": 3,
                },
                "name": "d",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                  },
                },
              },
            ],
          },
          "kind": "Message",
          "loc": Object {
            "endColNumber": 16,
            "endLineNumber": 3,
            "startColNumber": 31,
            "startLineNumber": 1,
          },
          "name": "m2",
        },
        "m1" => Object {
          "children": Object {
            "Field": Array [
              Object {
                "isRequired": true,
                "kind": "Field",
                "loc": Object {
                  "endColNumber": 8,
                  "endLineNumber": 7,
                  "startColNumber": 16,
                  "startLineNumber": 6,
                },
                "name": "m",
                "part": Object {
                  "FieldType": Object {
                    "differentiate": [Function],
                    "kind": "FieldType",
                  },
                },
              },
            ],
          },
          "kind": "Message",
          "loc": Object {
            "endColNumber": 16,
            "endLineNumber": 6,
            "startColNumber": 5,
            "startLineNumber": 5,
          },
          "name": "m1",
        },
      },
      "kind": "File",
      "loc": FileLocation {
        "dir": "",
        "fullname": "conduit_b.cdt",
        "name": "conduit_b.cdt",
      },
    },
    "proto": "
syntax=\\"proto2\\";
import \\"conduit_a.proto\\";
            


message m2 {
	required double d = 1;
}


message m1 {
	required m2 m = 1;
}
",
  },
}
`;

exports[`subdir isn't referenced in present dir 1`] = `"Cannot find imported file conduit_c.cdt from file conduit_b.cdt"`;
